added whole logic for authentication