@@ -6,9 +6,11 @@ import com.example.testegpt.domain.Item;
 import com.example.testegpt.service.ItemService;
 import jakarta.validation.Valid;
 import java.util.List;
+import java.util.stream.Collectors;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
@@ -25,23 +27,25 @@ public class ItemController {
   }
 
   @GetMapping
-  @PreAuthorize("hasRole('USER_ROLE')")
+  @PreAuthorize("hasRole('ROLE_USER')")
   public ResponseEntity<Page<ItemResponse>> findAll(
       @RequestParam(defaultValue = "0") int page, @RequestParam(defaultValue = "3") int size) {
     List<ItemResponse> itens =
-        itemService.findItens(PageRequest.of(page, size)).stream().map(ItemResponse::new).toList();
+        itemService.findItens(PageRequest.of(page, size)).stream().map(ItemResponse::new)
+            .collect(Collectors.toList());
 
-    return ResponseEntity.ok(new PageImpl<>(itens));
+    return ResponseEntity.ok(new PageImpl<>(itens, Pageable.ofSize(size), itens.size()));
   }
 
   @PostMapping
-  @PreAuthorize("hasRole('USER_ROLE')")
+  @PreAuthorize("hasRole('ROLE_USER')")
   public ResponseEntity<ItemResponse> create(@RequestBody @Valid ItemRequest request) {
     Item item = itemService.save(request.toItem());
     return ResponseEntity.status(HttpStatus.CREATED).body(new ItemResponse(item));
   }
 
   @DeleteMapping("/{id}")
+  @PreAuthorize("hasRole('ROLE_ADMIN')")
   public ResponseEntity<?> delete(@PathVariable Long id) {
     itemService.delete(id);
     return ResponseEntity.noContent().build();
